Docs: cập nhật ngữ cảnh cho Copilot (19/08/2025)  Customers 'Có nợ' dùng RPC, in hóa đơn compact có header & Tổng công nợ, POS hiển thị Tổng công nợ

--- a/.copilot-context.md
+++ b/.copilot-context.md
@@ -1,3 +1,13 @@
+# 🤖 Copilot Context Hub (Auto-load)
+
+Always read in this order for new sessions:
+
+1) `AI_CONTEXT.md` → Recent Updates + full project context
+2) `PROJECT_STATUS.md` → Current implementation and roadmap
+3) `README.md` → Tech stack and architecture
+4) `BUSINESS_ANALYSIS.md` → Business domain rules
+
+Key deltas (Aug 19, 2025): use RPC `search_debt_customers` for “Có nợ”, compact invoice print with company header and total debt, POS shows total debt.
 # 🤖 GitHub Copilot Context & Instructions
 
 > **Auto-loaded context for GitHub Copilot - Updated: August 4, 2025**
