--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -2,11 +2,12 @@
 
 ## 📚 Required Context Reading
 
-**IMPORTANT:** Before starting any task, ALWAYS read these files to understand the project context:
+**IMPORTANT:** Before starting any task, ALWAYS read these files to understand the project context (latest first):
 
-1. **`README.md`** - Complete project overview, tech stack, architecture
+1. **`AI_CONTEXT.md`** - Context hub for Copilot (includes “Recent Updates” section)
 2. **`PROJECT_STATUS.md`** - Current implementation status, next priorities, technical details
-3. **`BUSINESS_ANALYSIS.md`** - Business domain expertise, workflow requirements, industry insights
+3. **`README.md`** - Complete project overview, tech stack, architecture
+4. **`BUSINESS_ANALYSIS.md`** - Business domain expertise, workflow requirements, industry insights
 
 **Command to get context:**
 ```bash
@@ -366,4 +367,9 @@ xl: 1280px  /* Desktops */
 ---
 
 **Last Updated:** July 31, 2025  
-**Current Phase:** Phase 1 Complete ✅ → Phase 2 Product Management Ready 🚀
+**Current Phase:** Phase 2 – POS & Debt UX refinements in progress 🚀
+
+### 🔎 Critical business rules added (Aug 19, 2025)
+- Customers “Có nợ” filter must call RPC `search_debt_customers` and paginate by the returned IDs (do not filter after generic pagination).
+- Invoice print header pulls `business_*` settings and shows “Tổng công nợ” = current_debt + remaining when remaining > 0.
+- POS checkout panels display “Tổng công nợ” under “Còn lại”.
